; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_enable_ssl.c_GloballyReloadConfig.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_enable_ssl.c_GloballyReloadConfig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PostmasterPid = common dso_local global i32 0, align 4
@SIGHUP = common dso_local global i32 0, align 4
@WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"failed to send signal to postmaster: %m\00", align 1
@PGC_SIGHUP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @GloballyReloadConfig to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @GloballyReloadConfig() #0 {
  %1 = load i32, i32* @PostmasterPid, align 4
  %2 = load i32, i32* @SIGHUP, align 4
  %3 = call i64 @kill(i32 %1, i32 %2)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = load i32, i32* @WARNING, align 4
  %7 = call i32 @errmsg(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @ereport(i32 %6, i32 %7)
  br label %9

9:                                                ; preds = %5, %0
  %10 = load i32, i32* @PGC_SIGHUP, align 4
  %11 = call i32 @ProcessConfigFile(i32 %10)
  ret void
}

declare dso_local i64 @kill(i32, i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32 @ProcessConfigFile(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
